--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ body {
 @media (max-width: 991.98px) {
   .item-programs__image {
     padding-bottom: 66%;
-    width: 80%;
+    width: 100%;
   }
 }
 @media (max-width: 499.98px) {
@@ -693,6 +693,12 @@ body {
   border-radius: 0px;
   padding-top: calc(30px + (57 - 30) * ((100vw - 320px) / (1920 - 320)));
   padding-bottom: calc(30px + (63 - 30) * ((100vw - 320px) / (1920 - 320)));
+}
+@media (max-width: 767.98px) {
+  .statistics__text {
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;
+  }
 }
 
 .statistics__text_title {
