--- a/scss/style.scss
+++ b/scss/style.scss
@@ -385,7 +385,7 @@ body.lock {
    width: 100%;
    @media (max-width: 991.98px) {
       padding-bottom: 66%;
-      width: 80%;
+      width: 100%;
    }
    @media (max-width: 499.98px) {
       align-self: center;
@@ -557,6 +557,10 @@ body.lock {
    border-radius: 0px;
    padding-top: adaptive(30, 57);
    padding-bottom: adaptive(30, 63);
+   @media (max-width: 767.98px) {
+      padding-left: rem(15);
+      padding-right: rem(15);
+   }
 }
 
 .statistics__text_title {
